# agent-bench

./: README.md
agent-bench/: AUDIT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mock_agent.py  pyproject.toml
agent-bench/scenarios/: research-basic.yaml  tool-use.yaml
agent-bench/src/agentbench/: __init__.py  adapter.py  cli.py  models.py  runner.py  scenario.py
agent-bench/src/agentbench/adapters/: __init__.py
agent-bench/src/agentbench/evaluators/: __init__.py  core.py
agent-bench/src/agentbench/reporters/: __init__.py  html.py
agent-bench/tests/: test_core.py
